<resources>
    <string name="app_name_">ShareAnchor</string>
    <string name="sync_start">开始同步</string>
    <string name="sync_failed">同步完成</string>
    <string name="sync_progress">同步进行中</string>
    <string name="sync_over">同步成功</string>
    <string name="empty"></string>
    <string name="app_name">行動式導覽</string>
    <string name="base">基本資料+設定</string>
    <string name="fav">我的最愛</string>
    <string name="history">學習紀錄</string>
    <string name="ar">實境互動</string>
    <string name="help">教學手冊</string>
    <string name="search">查詢類別</string>
    <string name="qrcode">引導模式</string>
    <string name="username">呂同學,您好!</string>
    <string name="userinfo">學號:09170215\n姓名:呂艾艾\n</string>
    <string name="user_setting">用戶設定</string>
    <string name="user_name">呂艾庭</string>
    <string name="student_num">學號：</string>
    <string name="subject">系級：巨資二B</string>
    <string name="gender">性別：女</string>
    <string name="edit">編輯</string>
    <string name="monitor">顯示器</string>
    <string name="feedback">反饋</string>
    <string name="feedb">您寶貴的反饋將是我們進步的動力！\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;歡迎給予指教～</string>
    <string name="info">關於我們</string>
    <string name="favorite">我的最愛</string>
    <string name="date">使用時間：</string>
    <string name="time">使用時長：</string>
    <string name="bigtype">大類別：</string>
    <string name="smalltype">小類別：</string>
    <string name="search2">查詢書籍</string>
    <string name="main">首頁</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="about">圖書館QA</string>
    <string name="video">教學影片</string>
    <string name="question">常見問題</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="history2">學習紀錄</string>
    <string name="qrcode2">引導模式</string>
    <string name="use">應用指南</string>
    <string name="logout">登出</string>
    <string name="back">&#160;<![CDATA[<]]>&#160;&#160;</string>
    <string name="plaesescan">請掃描QRCODE</string>
    <string name="monitorset">顯示器設定</string>
    <string name="blank">&#160;</string>
    <string name="send">送出</string>
    <string name="aboutus">東吳大學 巨量資料管理學院學士學位學程</string>
    <string name="aboutus2">三年B班 黃郁庭 呂艾庭 吳姿伶 同學</string>
    <string name="aboutus3">指導老師：金凱儀 老師</string>
    <string name="aboutustitle">ABOUT US</string>
    <string name="givefb">請在此留下您的反饋～</string>
    <string name="big">選擇大類別</string>
    <string name="total">001 ~ 099\n總類</string>
    <string name="total2">001 ~ 099 總類</string>
    <string name="philo">100 ~ 100\n哲學類</string>
    <string name="philo2">100 ~ 100 哲學類</string>
    <string name="religion">200 ~ 298\n宗教類</string>
    <string name="religion2">200 ~ 298 宗教類</string>
    <string name="natural">300 ~ 390\n自然科學類</string>
    <string name="natural2">300 ~ 390 自然科學類</string>
    <string name="applied">394 ~ 497\n應用科學類</string>
    <string name="applied2">394 ~ 497 應用科學類</string>
    <string name="social">500 ~ 599\n社會科學類</string>
    <string name="social2">500 ~ 599 社會科學類</string>
    <string name="geography">600 ~ 609\n史地類</string>
    <string name="geography2">600 ~ 609 史地類</string>
    <string name="chinese_geo">610 ~ 690\n中國史地類</string>
    <string name="chinese_geo2">610 ~ 690 中國史地類</string>
    <string name="foreign_geo">710 ~ 834\n外國史地\n及語文類</string>
    <string name="foreign_geo2">710 ~ 834 外國史地及語文類</string>
    <string name="literature">835 ~ 890\n文學類</string>
    <string name="literature2">835 ~ 890 文學類</string>
    <string name="art">910 ~ 989\n藝術類</string>
    <string name="art2">910 ~ 989 藝術類</string>
    <string name="finish">完成回饋</string>
    <string name="finish_title">恭喜您順利抵達書櫃！</string>
    <string name="finish_title2">為了打造嶄新的體驗，請協助完成以下回饋調查，謝謝您的配合！</string>
    <string name="search_qtitle">＊查詢書籍＊</string>
    <string name="search_q2">在找尋書籍類別時，您認為在操作方面的複雜程度。</string>
    <string name="search_a2_1">複雜</string>
    <string name="search_a2_2">普通</string>
    <string name="search_a2_3">簡單</string>
    <string name="search_q3">認為在查詢類別可以改進的地方。</string>
    <string name="search_a3hint">沒有的話填寫「無」即可</string>
    <string name="follow_title">＊引導模式＊</string>
    <string name="follow_q3">在引導過程中，地圖的標示是否清楚明瞭？</string>
    <string name="follow_a3_1">清楚</string>
    <string name="follow_a3_2">不太清楚，</string>
    <string name="follow_a3_2hint">原因</string>
    <string name="follow_q4">在引導過程中，操作是否流暢（有無閃退、頁面錯誤等問題）？</string>
    <string name="follow_a4_1">流暢</string>
    <string name="follow_a4_2">不流暢，</string>
    <string name="follow_a4_2hint">請留下您遇到的問題</string>
    <string name="whole_title">＊整體評分＊</string>
    <string name="search_q1">在查詢書籍類別時，是否可以順利找到類別？</string>
    <string name="search_a1_1">可以迅速找到</string>
    <string name="search_a1_2">需要一些時間才能找到</string>
    <string name="search_a1_3">無法找到</string>
    <string name="follow_q1">在本次體驗之前，是否自行在圖書館尋找過書籍？</string>
    <string name="follow_a1_1">有找過</string>
    <string name="follow_a1_2">沒有找過</string>
    <string name="follow_q2">透過本次的引導，是否增加您找書的效率？</string>
    <string name="follow_a2_1">效率提升</string>
    <string name="follow_a2_2">效率下降</string>
    <string name="follow_a2_3">沒有改變</string>
    <string name="whole_q1">您對這次體驗的評分？（5分滿分）</string>
    <string name="whole_a1_1">1分</string>
    <string name="whole_a1_2">2分</string>
    <string name="whole_a1_3">3分</string>
    <string name="whole_a1_4">4分</string>
    <string name="whole_a1_5">5分</string>
    <string name="thanks">謝謝您的配合填寫，期待您再次體驗～</string>
    <string name="librarytime_title">111學年度第一學期 圖書館開放時間</string>
    <string name="periodicals_q">Q:圖書館是否有期刊？</string>
    <string name="periodicals_a">A:有，圖書館的期刊區位於本館五樓的期刊室。</string>
    <string name="eat_q">Q:圖書館是否可以飲食？</string>
    <string name="eat_a">A:館內嚴禁攜帶食物飲料、寵物、吸菸、張貼文宣、毀損物品，及以物品預佔席位。</string>
    <string name="borrow_q">Q:圖書館借書期限為幾天？</string>
    <string name="borrow_a">A:大學部學生可借50本書，期限為4週（28天），續借後最長借期為12週（28天）。</string>
    <string name="print_q">Q:圖書館的影印區位於何處？</string>
    <string name="print_a">A:在本館3F的資訊檢索區及書庫4B、7B皆有影印區開放使用。</string>
    <string name="dense_q">Q:圖書館的密集書庫位於何處？</string>
    <string name="dense_a">A:密集書庫為於第一教研大樓的地下一樓，但必須從圖書館書庫2B進入。\n&#160;&#160;&#160;密集書庫的主要功能在於節省空間，所採用的書架並非一般的固定式書架，\n&#160;&#160;&#160;而是採用移動式書架，通常用為典藏罕用圖書，大都採用閉架式管理。</string>
    <string name="loginhint">學號</string>
    <string name="passwordhint">密碼</string>
    <string name="passwordsign">密碼：</string>
    <string name="tosignup">點我註冊</string>
    <string name="tologin">登入</string>
    <string name="email">電子信箱：</string>
    <string name="signup">註冊</string>
    <string name="alreadysignup">已有帳號</string>
    <string name="beaconshow1">hi</string>
    <string name="beaconshow2">hello</string>
    <string name="beaconshow3">who</string>
    <string name="beaconshow4">不要再壞掉了</string>
    <string name="comicenter">漫畫區導覽</string>
    <string name="end">停止導覽</string>
    <string name="toqrcode">掃描QRCODE</string>
    <string name="welcome_comic">歡迎來到漫畫區</string>
    <string name="directions">請利用選單內的掃描功能，掃描書櫃附近的QRCODE來查看漫畫簡介，</string>
    <string name="list">並可在選單查看學習進度。</string>
    <string name="start">開始學習</string>
    <string name="comic">漫畫介紹</string>
    <string name="author">作者介紹</string>
    <string name="direction">請到選單點擊掃描按鈕來掃描QRCODE!</string>
</resources>