<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/bar_green"
    tools:context=".find">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/bar_green"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:text="@string/back"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="back"
                tools:ignore="OnClick,UsingOnClickInXml"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="18dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/big"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="600dp"
            android:layout_height="350dp"
            android:layout_marginLeft="65dp">
            <Button
                android:id="@+id/total"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:text="@string/total"
                android:textSize="20sp"
                android:background="@drawable/c6d0ba_round"
                android:onClick="total"
                tools:ignore="OnClick,UsingOnClickInXml"/>
            <Button
                android:id="@+id/philo"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/total"
                android:text="@string/philo"
                android:textSize="20sp"
                android:background="@drawable/c6d0ba_round"
                android:onClick="philo"
                tools:ignore="OnClick,UsingOnClickInXml"/>
            <Button
                android:id="@+id/religion"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/philo"
                android:text="@string/religion"
                android:textSize="20sp"
                android:background="@drawable/c6d0ba_round"
                android:onClick="religion"
                tools:ignore="OnClick,UsingOnClickInXml"/>
            <Button
                android:id="@+id/natural"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/total"
                android:layout_marginLeft="20dp"
                android:layout_margintop="5dp"
                android:text="@string/natural"
                android:textSize="20sp"
                android:background="@drawable/a2b38b_green"
                android:onClick="natural"
                tools:ignore="OnClick,UsingOnClickInXml"/>
            <Button
                android:id="@+id/applied"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/philo"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/natural"
                android:text="@string/applied"
                android:textSize="20sp"
                android:background="@drawable/a2b38b_green"
                android:onClick="applied"
                tools:ignore="OnClick,UsingOnClickInXml"/>
            <Button
                android:id="@+id/social"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/religion"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/applied"
                android:text="@string/social"
                android:textSize="20sp"
                android:background="@drawable/a2b38b_green"
                android:onClick="social"
                tools:ignore="OnClick,UsingOnClickInXml"/>
            <Button
                android:id="@+id/geography"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/natural"
                android:layout_marginLeft="20dp"
                android:text="@string/geography"
                android:textSize="20sp"
                android:background="@drawable/c6d0ba_round"
                android:onClick="geography"
                tools:ignore="OnClick,UsingOnClickInXml"/>
            <Button
                android:id="@+id/chinese_geo"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/applied"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/geography"
                android:text="@string/chinese_geo"
                android:textSize="20sp"
                android:background="@drawable/c6d0ba_round"
                android:onClick="chinese_geo"
                tools:ignore="OnClick,UsingOnClickInXml"/>
            <Button
                android:id="@+id/foreign_geo"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/social"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/chinese_geo"
                android:text="@string/foreign_geo"
                android:textSize="20sp"
                android:background="@drawable/c6d0ba_round"
                android:onClick="foreign_geo"
                tools:ignore="OnClick,UsingOnClickInXml"/>
            <Button
                android:id="@+id/literature"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/geography"
                android:layout_marginLeft="20dp"
                android:layout_margintop="5dp"
                android:text="@string/literature"
                android:textSize="20sp"
                android:background="@drawable/a2b38b_green"
                android:onClick="literature"
                tools:ignore="OnClick,UsingOnClickInXml"/>
            <Button
                android:id="@+id/art"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/chinese_geo"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/literature"
                android:text="@string/art"
                android:textSize="20sp"
                android:background="@drawable/a2b38b_green"
                android:onClick="art"
                tools:ignore="OnClick,UsingOnClickInXml"/>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>



