<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/bar_green"
    tools:context=".aboutus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/bar_green"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:text="@string/back"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="back"
                tools:ignore="OnClick,UsingOnClickInXml"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/aboutus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:text="@string/info"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="18dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/aboutustitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/aboutustitle"
                android:textSize="35sp"
                android:textColor="@color/bar_green"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp" />

            <TextView
                android:id="@+id/aboutus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutus"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:layout_below="@+id/aboutustitle"
                android:layout_marginTop="20dp" />
            <TextView
                android:id="@+id/aboutus2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutus2"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:layout_below="@+id/aboutus1"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/aboutus3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutus3"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:layout_below="@+id/aboutus2"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>



